--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
     <div class="nav-inner">
       <a class="nav-brand" href="#top">
-        <img class="logo-mark" src="assests/logo-no-background2.png" alt="Noor International logo" />
+        <img class="logo-mark" src="logo-no-background2.png" alt="Noor International logo" />
         <span class="brand-text">Noor International</span>
       </a>
       <div class="nav-group">
@@ -60,7 +60,7 @@
   <section class="section about-section" id="about">
     <div class="container about-inner">
       <div class="about-media">
-        <img src="assests/bed linen.png" alt="Neatly arranged bed linen" />
+        <img src="bed linen.png" alt="Neatly arranged bed linen" />
       </div>
       <div class="about-content">
         <h2>About Us</h2>
@@ -93,8 +93,8 @@
   <section class="section feature-image">
     <div class="container">
       <picture>
-        <source media="(max-width: 912px)" srcset="assests/not-together.png" />
-        <img src="assests/together.jpeg" alt="Noor International team collaboration" />
+        <source media="(max-width: 912px)" srcset="not-together.png" />
+        <img src="together.jpeg" alt="Noor International team collaboration" />
       </picture>
     </div>
   </section>
@@ -107,7 +107,7 @@
         <span class="products-rule" aria-hidden="true"></span>
         <h2 class="products-title">Export-Ready<br /><span>Woven Textiles</span></h2>
         <div class="products-catalogue">
-          <a class="catalogue-btn" href="assests/Noor International Catalogue.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="catalogue-btn" href="Noor International Catalogue.pdf" target="_blank" rel="noopener noreferrer">
             View our Catalogue
             <span class="catalogue-icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
@@ -121,7 +121,7 @@
       </div>
       <div class="products-row">
         <div class="products-image">
-          <img src="assests/product1.jpeg" alt="Home and kitchen textile products" />
+          <img src="product1.jpeg" alt="Home and kitchen textile products" />
         </div>
         <div class="products-cards">
           <div class="product-card">
@@ -152,7 +152,7 @@
       </div>
       <div class="products-row">
         <div class="products-image">
-          <img src="assests/product2.jpeg" alt="Workwear and healthcare textile products" />
+          <img src="product2.jpeg" alt="Workwear and healthcare textile products" />
         </div>
         <div class="products-cards">
           <div class="product-card">
