--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Noor International</title>
-  <meta name="description" content="Traditional woven fabrics crafted with experience and care. Bulk and custom weaving solutions." />
+  <meta name="description" content="Noor Internationals is a trusted company providing quality products and services. Visit our official website to learn more." />
   <link rel="stylesheet" href="styles.css" />
   <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
@@ -20,7 +20,9 @@
 </head>
 
 <body id="top">
-
+    
+  <h1 class="visually-hidden">Noor Internationals</h1>
+    <!-- Navigation -->
     <nav class="navbar">
     <div class="nav-inner">
       <a class="nav-brand" href="#top">
@@ -45,7 +47,7 @@
   <header class="hero">
     <div class="container hero-content">
       <p class="hero-eyebrow">ESTABLISHED HERITAGE • EXPORT QUALITY</p>
-      <h1 class="hero-title">Where long-term <span>Partnerships Begin</span></h1>
+      <h2 class="hero-title">Where long-term <span>Partnerships Begin</span></h2>
       <p class="hero-subtitle">
         Reliable textiles and made-ups, delivered with consistency every time.
       </p>
@@ -82,7 +84,7 @@
 
         <p>
           Beyond manufacturing, we help buyers overcome sourcing challenges through dependable 
-          timelines, transparent communication, and consistent quality. At Noor International, 
+          timelines, transparent communication, and consistent quality. At Noor Internationals, 
           we build long-term partnerships based on trust, performance, and reliability.
         </p>
       </div>
