--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Noor International</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="description" content="Noor Internationals is a trusted company providing quality products and services. Visit our official website to learn more." />
   <link rel="stylesheet" href="styles.css" />
   <script type="text/javascript"
